src/snapshots/typst_playground__lexer__tests__input1.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        start: 0,
        end: 1,
    },
]
