src/snapshots/typst_playground__lexer__tests__input2.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        start: 0,
        end: 1,
    },
    Token {
        kind: WhiteSpace,
        start: 1,
        end: 1,
    },
    Token {
        kind: Plus,
        start: 2,
        end: 2,
    },
    Token {
        kind: WhiteSpace,
        start: 3,
        end: 3,
    },
    Token {
        kind: Identifier,
        start: 4,
        end: 5,
    },
]
