src/snapshots/typst_playground__lexer__tests__input3.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: LeftParen,
        start: 0,
        end: 0,
    },
    Token {
        kind: Identifier,
        start: 1,
        end: 2,
    },
    Token {
        kind: WhiteSpace,
        start: 2,
        end: 2,
    },
    Token {
        kind: Plus,
        start: 3,
        end: 3,
    },
    Token {
        kind: WhiteSpace,
        start: 4,
        end: 4,
    },
    Token {
        kind: Identifier,
        start: 5,
        end: 6,
    },
    Token {
        kind: RightParen,
        start: 6,
        end: 6,
    },
]
